--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,13 @@
   <div id="reactContainer"></div>
 
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script> -->
 
   <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-analytics.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-analytics.js"></script> -->
 
-  <script>
+  <!-- <script>
     // Your web app's Firebase configuration
     var firebaseConfig = {
       apiKey: "AIzaSyB0dYbm2TvI11pBlK0WfLraofwdTARp9ks",
@@ -33,7 +33,7 @@
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     firebase.analytics();
-  </script>
+  </script> -->
 
 </body>
 
